# demo-project

./: .gitignore  .pre-commit-config.yaml  README.md  demo.robot  log.html  output.xml  pyproject.toml  report.html  tasks.py
src/try/: __init__.py
