[project]
name = "robot-try"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "hemanth-kumar-j", email = "hemanth@nitimis.com" }
]
dependencies = [
    "robotframework>=7.2",
    "robotframework-seleniumlibrary>=6.7.0",
    "invoke>=2.2.0",
    "black>=25.1.0",
    "pre-commit>=4.2.0",
    "pylint>=3.3.4",
    "robotframework-metrics==3.7.0",
    "robotframework-dashboard>=0.5.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/robot_try"]
